--- a/index.html
+++ b/index.html
@@ -1,47 +1,55 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh-Hans">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>L-UI</title>
-</head>
-<style>
-    *{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
+  </head>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
-    :root{
-        --button-height: 32px;
-        --font-size: 14px;
-        --button-bg: white;
-        --button-active-bg: #eee;
-        --border-radius: 4px;
-        --color:#999;
-        --border-color:#999;
-        --border-color-hover:#666;
+    :root {
+      --button-height: 32px;
+      --font-size: 14px;
+      --button-bg: white;
+      --button-active-bg: #eee;
+      --border-radius: 4px;
+      --color: #999;
+      --border-color: #999;
+      --border-color-hover: #666;
     }
     /*用户变量*/
-    #app{
-        margin: 20px;
+    #app {
+      margin: 20px;
     }
-    body{
-        font-size: var(--font-size);
+    body {
+      font-size: var(--font-size);
     }
-</style>
-<style>
+  </style>
+  <style>
+    .icon {
+      width: 1em;
+      height: 1em;
+    }
+  </style>
 
-</style>
-
-<body>
-<div id="app">
-    <g-button></g-button>
-<!--    引用组件-->
-<!--    {{ message }}-->
-</div>
-<script src="./src/App.js"></script>
-<!--入口文件-->
-</body>
+  <body>
+    <div id="app">
+      <g-button icon="setting">按钮</g-button>
+      <g-button icon="">按钮</g-button>
+      <g-button icon="setting" iconposition="right">按钮</g-button>
+      <!--    引用组件-->
+      <!--    {{ message }}-->
+    </div>
+    <script src="./src/App.js"></script>
+    <script src="//at.alicdn.com/t/font_1085292_8dfu0g6oxd9.js"></script>
+    <!--入口文件-->
+  </body>
 </html>
