添加iconposition的验证去除icon-undefined的情况

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <body>
     <div id="app">
-      <g-button icon="setting">按钮</g-button>
+      <g-button icon="setting" iconposition="up">按钮</g-button>
       <g-button icon="">按钮</g-button>
       <g-button icon="setting" iconposition="right">按钮</g-button>
       <!--    引用组件-->
