将svg代码整理到icon.vue组件中

--- a/index.html
+++ b/index.html
@@ -34,17 +34,15 @@
     }
   </style>
   <style>
-    .icon {
-      width: 1em;
-      height: 1em;
-    }
+    
   </style>
 
   <body>
     <div id="app">
-      <g-button icon="setting" iconposition="up">按钮</g-button>
+      <g-button icon="setting" iconposition="left">按钮</g-button>
       <g-button icon="">按钮</g-button>
       <g-button icon="setting" iconposition="right">按钮</g-button>
+      <g-icon name="download"></g-icon>
       <!--    引用组件-->
       <!--    {{ message }}-->
     </div>
