--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
   <body>
     <div id="app">
-      <g-button icon="setting" iconposition="left">按钮</g-button>
-      <g-button icon="">按钮</g-button>
-      <g-button icon="setting" iconposition="right">按钮</g-button>
-      <g-icon name="download"></g-icon>
+      <g-button icon="setting" iconposition="left" :loading="loading1" @loading="loading1 = !loading1">按钮</g-button>
+      <g-button icon="" :loading="loading2" @loading="loading2 = !loading2">按钮</g-button>
+      <g-button icon="setting" iconposition="right" :loading="loading3" @loading="loading3 = !loading3">按钮</g-button>
+      <!-- <g-icon name="download"></g-icon> -->
       <!--    引用组件-->
       <!--    {{ message }}-->
     </div>
