--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       --border-radius: 4px;
       --color: #999;
       --border-color: #999;
-      --border-color-hover: #666;
+      /* --border-color-hover: #666; */
+      --border-color-hover:red;
     }
     /*用户变量*/
     #app {
@@ -42,6 +43,13 @@
       <g-button icon="setting" iconposition="left" :loading="loading1" @loading="loading1 = !loading1">按钮</g-button>
       <g-button icon="" :loading="loading2" @loading="loading2 = !loading2">按钮</g-button>
       <g-button icon="setting" iconposition="right" :loading="loading3" @loading="loading3 = !loading3">按钮</g-button>
+      <g-ButtonGroup>
+            <g-button icon="left">上一页</g-button>
+            <g-button >更多</g-button>
+            <g-button icon="right" iconposition="right">下一页</g-button>
+      </g-ButtonGroup>
+      
+
       <!-- <g-icon name="download"></g-icon> -->
       <!--    引用组件-->
       <!--    {{ message }}-->
