--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
       <g-button icon="setting" iconposition="left" :loading="loading1" @loading="loading1 = !loading1">按钮</g-button>
       <g-button icon="" :loading="loading2" @loading="loading2 = !loading2">按钮</g-button>
       <g-button icon="setting" iconposition="right" :loading="loading3" @loading="loading3 = !loading3">按钮</g-button>
-      <g-ButtonGroup>
+      <g-buttongroup>
             <g-button icon="left">上一页</g-button>
             <g-button >更多</g-button>
             <g-button icon="right" iconposition="right">下一页</g-button>
-      </g-ButtonGroup>
+      </g-buttongroup>
       
 
       <!-- <g-icon name="download"></g-icon> -->
