--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <!-- <g-icon name="download"></g-icon> -->
       <!--    引用组件-->
       <!--    {{ message }}-->
+      <div class="test"></div>
     </div>
     <script src="./src/App.js"></script>
     <script src="//at.alicdn.com/t/font_1085292_75j8l7zgogw.js"></script>
