--- a/index.html
+++ b/index.html
@@ -1,62 +1,67 @@
 <!DOCTYPE html>
 <html lang="zh-Hans">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8"/>
     <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+            name="viewport"
+            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>L-UI</title>
-  </head>
-  <style>
+</head>
+<style>
     * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
     }
+
     :root {
-      --button-height: 32px;
-      --font-size: 14px;
-      --button-bg: white;
-      --button-active-bg: #eee;
-      --border-radius: 4px;
-      --color: #999;
-      --border-color: #999;
-      /* --border-color-hover: #666; */
-      --border-color-hover:red;
+        --button-height: 32px;
+        --font-size: 14px;
+        --button-bg: white;
+        --button-active-bg: #eee;
+        --border-radius: 4px;
+        --color: #999;
+        --border-color: #999;
+        /* --border-color-hover: #666; */
+        --border-color-hover: red;
     }
+
     /*用户变量*/
     #app {
-      margin: 20px;
+        margin: 20px;
     }
+
     body {
-      font-size: var(--font-size);
+        font-size: var(--font-size);
     }
-  </style>
-  <style>
-    
-  </style>
+</style>
+<style>
 
-  <body>
-    <div id="app">
-      <g-button icon="setting" iconposition="left" :loading="loading1" @loading="loading1 = !loading1">按钮</g-button>
-      <g-button icon="" :loading="loading2" @loading="loading2 = !loading2">按钮</g-button>
-      <g-button icon="setting" iconposition="right" :loading="loading3" @loading="loading3 = !loading3">按钮</g-button>
-      <g-buttongroup>
+</style>
+
+<body>
+<div id="app">
+    <g-input></g-input>
+    <div style="margin: 20px;">
+        <g-button icon="setting" iconposition="left" :loading="loading1" @loading="loading1 = !loading1">按钮</g-button>
+        <g-button icon="" :loading="loading2" @loading="loading2 = !loading2">按钮</g-button>
+        <g-button icon="setting" iconposition="right" :loading="loading3" @loading="loading3 = !loading3">按钮</g-button>
+        <g-buttongroup>
             <g-button icon="left">上一页</g-button>
-            <g-button >更多</g-button>
+            <g-button>更多</g-button>
             <g-button icon="right" iconposition="right">下一页</g-button>
-      </g-buttongroup>
-      
-
-      <!-- <g-icon name="download"></g-icon> -->
-      <!--    引用组件-->
-      <!--    {{ message }}-->
-      <div class="test"></div>
+        </g-buttongroup>
     </div>
-    <script src="./src/App.js"></script>
-    <script src="//at.alicdn.com/t/font_1085292_75j8l7zgogw.js"></script>
-    <!--入口文件-->
-  </body>
+
+    <!-- <g-icon name="download"></g-icon> -->
+    <!--    引用组件-->
+    <!--    {{ message }}-->
+    <div class="test"></div>
+</div>
+<script src="./src/App.js"></script>
+<script src="//at.alicdn.com/t/font_1085292_75j8l7zgogw.js"></script>
+<!--入口文件-->
+</body>
 </html>
