--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
+    <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
     <title>L-UI</title>
 </head>
 <style>
@@ -25,7 +26,7 @@
         --color: #999;
         --border-color: #999;
         /* --border-color-hover: #666; */
-        --border-color-hover: red;
+        --border-color-hover: #666;
     }
 
     /*用户变量*/
@@ -36,6 +37,10 @@
     body {
         font-size: var(--font-size);
     }
+
+    .box {
+        margin: 20px;
+    }
 </style>
 <style>
 
@@ -43,8 +48,19 @@
 
 <body>
 <div id="app">
-    <g-input></g-input>
-    <div style="margin: 20px;">
+    <div class="box">
+        <g-input value="小明" :disabled="true"></g-input>
+        <g-input value="小明" disabled></g-input>
+        <g-input value="小明" :readonly="true"></g-input>
+    </div>
+    <div class="box">
+        <g-input value="小红"></g-input>
+    </div>
+    <div class="box">
+        <g-input value="小" error="姓名不能少于两个字"></g-input>
+    </div>
+
+    <div style="margin: 20px;" class="box">
         <g-button icon="setting" iconposition="left" :loading="loading1" @loading="loading1 = !loading1">按钮</g-button>
         <g-button icon="" :loading="loading2" @loading="loading2 = !loading2">按钮</g-button>
         <g-button icon="setting" iconposition="right" :loading="loading3" @loading="loading3 = !loading3">按钮</g-button>
@@ -61,7 +77,7 @@
     <div class="test"></div>
 </div>
 <script src="./src/App.js"></script>
-<script src="//at.alicdn.com/t/font_1085292_75j8l7zgogw.js"></script>
+<!--<script src="//at.alicdn.com/t/font_1085292_75j8l7zgogw.js"></script>-->
 <!--入口文件-->
 </body>
 </html>
