添加Input 测试用例

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <g-input value="小红"></g-input>
     </div>
     <div class="box">
-        <g-input value="小" error="姓名不能少于两个字"></g-input>
+        <g-input value="小" @change="inputChange" error="出错了"></g-input>
     </div>
 
     <div style="margin: 20px;" class="box">
