--- a/index.html
+++ b/index.html
@@ -92,7 +92,21 @@
         <g-row>
 <!--            加上 :相当于 :span="js代码"-->
             <g-col span="2"></g-col>
-            <g-col span="22"></g-col>
+            <g-col span="20" offset="2"></g-col>
+        </g-row>
+        <g-row>
+            <g-col span="5"></g-col>
+            <g-col span="5" offset="4"></g-col>
+            <g-col span="5" offset="5"></g-col>
+        </g-row>
+        <g-row gutter="10">
+            <g-col ></g-col>
+            <g-col ></g-col>
+        </g-row>
+        <g-row gutter="20">
+            <g-col ></g-col>
+            <g-col ></g-col>
+            <g-col ></g-col>
         </g-row>
     </div>
 <!--    <div class="row">-->
