--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     .box {
         margin: 20px;
     }
+
     /*.row{*/
     /*    display: flex;*/
     /*}*/
@@ -73,57 +74,6 @@
         <g-input v-model="msg"></g-input>
         <p>{{msg}}</p>
     </div>
-    <div class="box">
-        <g-row>
-            <g-col ></g-col>
-            <g-col ></g-col>
-        </g-row>
-        <g-row>
-            <g-col ></g-col>
-            <g-col ></g-col>
-            <g-col ></g-col>
-        </g-row>
-        <g-row>
-            <g-col ></g-col>
-            <g-col ></g-col>
-            <g-col ></g-col>
-            <g-col ></g-col>
-        </g-row>
-        <g-row>
-<!--            加上 :相当于 :span="js代码"-->
-            <g-col span="2"></g-col>
-            <g-col span="20" offset="2"></g-col>
-        </g-row>
-        <g-row>
-            <g-col span="5"></g-col>
-            <g-col span="5" offset="4"></g-col>
-            <g-col span="5" offset="5"></g-col>
-        </g-row>
-        <g-row gutter="10">
-            <g-col ></g-col>
-            <g-col ></g-col>
-        </g-row>
-        <g-row gutter="20">
-            <g-col ></g-col>
-            <g-col ></g-col>
-            <g-col ></g-col>
-        </g-row>
-    </div>
-<!--    <div class="row">-->
-<!--        <div class="col"></div>-->
-<!--        <div class="col"></div>-->
-<!--    </div>-->
-
-<!--    <div class="row">-->
-<!--        <div class="col"></div>-->
-<!--        <div class="col"></div>-->
-<!--        <div class="col"></div>-->
-<!--        <div class="col"></div>-->
-<!--    </div>-->
-<!--    <div class="row">-->
-<!--        <div class="col" data-col="2"></div>-->
-<!--        <div class="col" data-col="22"></div>-->
-<!--    </div>-->
     <div style="margin: 20px;" class="box">
         <g-button icon="setting" iconposition="left" :loading="loading1" @loading="loading1 = !loading1">按钮</g-button>
         <g-button icon="" :loading="loading2" @loading="loading2 = !loading2">按钮</g-button>
@@ -134,6 +84,63 @@
             <g-button icon="right" iconposition="right">下一页</g-button>
         </g-buttongroup>
     </div>
+    <div class="box">
+        <g-row>
+            <g-col span="12"></g-col>
+            <g-col span="12"></g-col>
+        </g-row>
+        <g-row>
+            <g-col span="8"></g-col>
+            <g-col span="8"></g-col>
+            <g-col span="8"></g-col>
+        </g-row>
+        <g-row>
+            <g-col span="6"></g-col>
+            <g-col span="6"></g-col>
+            <g-col span="6"></g-col>
+            <g-col span="6"></g-col>
+        </g-row>
+        <g-row>
+            <!--            加上 :相当于 :span="js代码"-->
+            <g-col span="2"></g-col>
+            <g-col span="20" offset="2"></g-col>
+        </g-row>
+        <g-row>
+            <g-col span="5"></g-col>
+            <g-col span="5" offset="4"></g-col>
+            <g-col span="5" offset="5"></g-col>
+        </g-row>
+        <g-row gutter="10">
+            <g-col></g-col>
+            <g-col></g-col>
+        </g-row>
+        <g-row gutter="20">
+            <g-col span="8"></g-col>
+            <g-col span="8"></g-col>
+            <g-col span="8"></g-col>
+        </g-row>
+        <g-row>
+            <g-col span="10"></g-col>
+            <g-col span="4" :phone="{span: 8,offset: 0}"></g-col>
+            <g-col span="10"></g-col>
+        </g-row>
+    </div>
+    <!--    <div class="row">-->
+    <!--        <div class="col"></div>-->
+    <!--        <div class="col"></div>-->
+    <!--    </div>-->
+
+    <!--    <div class="row">-->
+    <!--        <div class="col"></div>-->
+    <!--        <div class="col"></div>-->
+    <!--        <div class="col"></div>-->
+    <!--        <div class="col"></div>-->
+    <!--    </div>-->
+    <!--    <div class="row">-->
+    <!--        <div class="col" data-col="2"></div>-->
+    <!--        <div class="col" data-col="22"></div>-->
+    <!--    </div>-->
+
 
     <!-- <g-icon name="download"></g-icon> -->
     <!--    引用组件-->
