响应式移动优先完成

--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@
             <g-col span="4" :ipad="{span: 6}"  :narrow="{span: 8}" :pc="{span: 12}" :wide="{span: 2}"></g-col>
             <g-col span="10" :ipad="{span: 9}"  :narrow="{span: 8}" :pc="{span: 6}" :wide="{span: 2}"></g-col>
         </g-row>
+        <g-row>
+            <g-col span="24" :ipad="{span: 12}" :narrow="{span: 8}" ></g-col>
+            <g-col span="24" :ipad="{span: 12}" :narrow="{span: 8}" ></g-col>
+            <g-col span="24" :ipad="{span: 12}" :narrow="{span: 8}" ></g-col>
+            <g-col span="24" :ipad="{span: 12}" :narrow="{span: 8}" ></g-col>
+            <g-col span="24" :ipad="{span: 12}" :narrow="{span: 8}" ></g-col>
+            <g-col span="24" :ipad="{span: 12}" :narrow="{span: 8}" ></g-col>
+        </g-row>
     </div>
     <!--    <div class="row">-->
     <!--        <div class="col"></div>-->
