基本实现Toast 自动关闭 延时关闭 关闭按钮 支持显示Html 支持点击回调

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 <body>
 <div id="app">
 <div class="box">
-    <button @click="showToast">Toast</button>
+    <button @click="showToast">{{toast}}</button>
 </div>
     <!--    默认布局demo-->
     <!--    <div class="box">-->
