--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
 <body>
 <div id="app">
 <div class="box">
-    <button @click="showToast">{{toast}}</button>
+    <button @click="showToast1">top</button>
+    <button @click="showToast2">middle</button>
+    <button @click="showToast3">bottom</button>
+
 </div>
     <!--    默认布局demo-->
     <!--    <div class="box">-->
