--- a/index.html
+++ b/index.html
@@ -80,12 +80,46 @@
 
 <body>
 <div id="app">
-<div class="box">
-    <button @click="showToast1">top</button>
-    <button @click="showToast2">middle</button>
-    <button @click="showToast3">bottom</button>
+    <div class="box">
+        <g-tabs :selected="selectedTab" @update.selected="selectedTab = $event" direction="Horizontal">
+            <g-tabs-head>
+                <template slot="actions">
+                    <button>设置</button>
+                </template>
+                <g-tabs-item name="woman">
+                    <g-icon name="setting"></g-icon>
+                    美女
+                </g-tabs-item>
+            </g-tabs-head>
+            <g-tabs-head>
+                <g-tabs-item name="finance" :disabled="false">
+                    财经
+                </g-tabs-item>
+            </g-tabs-head>
+            <g-tabs-head>
+                <g-tabs-item name="sports">
+                    体育
+                </g-tabs-item>
+            </g-tabs-head>
+            <g-tabs-body>
+                <g-tabs-pen name="woman">
+                    美女相关
+                </g-tabs-pen>
+                <g-tabs-pen name="finance">
+                    财经相关
+                </g-tabs-pen>
+                <g-tabs-pen name="sports">
+                    体育相关
+                </g-tabs-pen>
+            </g-tabs-body>
+        </g-tabs>
+    </div>
+    <!--<div class="box">-->
+    <!--    <button @click="showToast1">top</button>-->
+    <!--    <button @click="showToast2">middle</button>-->
+    <!--    <button @click="showToast3">bottom</button>-->
 
-</div>
+    <!--</div>-->
     <!--    默认布局demo-->
     <!--    <div class="box">-->
     <!--        <g-layout style="height: 100vh;">-->
