--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
 <body>
 <div id="app">
     <div class="box">
-        <g-tabs :selected="selectedTab" @update.selected="selectedTab = $event" direction="Horizontal">
+        <!--        {{selectedTab}}-->
+        <!--        <g-tabs :selected="selectedTab" @update.selected="selectedTab = $event" direction="Horizontal">-->
+        <g-tabs :selected.sync="selectedTab" direction="Horizontal">
             <g-tabs-head>
                 <template slot="actions">
                     <button>设置</button>
@@ -90,27 +92,23 @@
                     <g-icon name="setting"></g-icon>
                     美女
                 </g-tabs-item>
-            </g-tabs-head>
-            <g-tabs-head>
                 <g-tabs-item name="finance" :disabled="false">
                     财经
                 </g-tabs-item>
-            </g-tabs-head>
-            <g-tabs-head>
                 <g-tabs-item name="sports">
                     体育
                 </g-tabs-item>
             </g-tabs-head>
             <g-tabs-body>
-                <g-tabs-pen name="woman">
+                <g-tabs-pane name="woman">
                     美女相关
-                </g-tabs-pen>
-                <g-tabs-pen name="finance">
+                </g-tabs-pane>
+                <g-tabs-pane name="finance">
                     财经相关
-                </g-tabs-pen>
-                <g-tabs-pen name="sports">
+                </g-tabs-pane>
+                <g-tabs-pane name="sports">
                     体育相关
-                </g-tabs-pen>
+                </g-tabs-pane>
             </g-tabs-body>
         </g-tabs>
     </div>
