--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <template slot="actions">
                     <button>设置</button>
                 </template>
-                <g-tabs-item name="woman">
+                <g-tabs-item name="woman" >
                     <g-icon name="setting"></g-icon>
                     美女
                 </g-tabs-item>
@@ -102,12 +102,15 @@
             <g-tabs-body>
                 <g-tabs-pane name="woman">
                     美女相关
+                    <img src="http://img3.imgtn.bdimg.com/it/u=1986179278,1118313821&fm=26&gp=0.jpg" alt="">
                 </g-tabs-pane>
                 <g-tabs-pane name="finance">
                     财经相关
+                    <img src="http://img5.imgtn.bdimg.com/it/u=1979198230,3799788659&fm=26&gp=0.jpg" alt="">
                 </g-tabs-pane>
                 <g-tabs-pane name="sports">
                     体育相关
+                    <img src="http://img2.imgtn.bdimg.com/it/u=234634259,4236876085&fm=26&gp=0.jpg" alt="">
                 </g-tabs-pane>
             </g-tabs-body>
         </g-tabs>
