--- a/index.html
+++ b/index.html
@@ -81,39 +81,61 @@
 <body>
 <div id="app">
     <div class="box">
+
+<!--        <g-tabs selected="finance" direction="Horizontal">-->
+<!--            <g-tabs-head>-->
+                <g-tabs-item name="woman" >美女 </g-tabs-item>
+<!--                <g-tabs-item name="finance"> 财经 </g-tabs-item>-->
+<!--                <g-tabs-item name="sports"> 体育 </g-tabs-item>-->
+<!--            </g-tabs-head>-->
+<!--            <g-tabs-body>-->
+                <g-tabs-pane name="woman">美女相关</g-tabs-pane>
+<!--                <g-tabs-pane name="finance">财经相关</g-tabs-pane>-->
+<!--                <g-tabs-pane name="sports">体育相关</g-tabs-pane>-->
+<!--            </g-tabs-body>-->
+<!--        </g-tabs>-->
+
+
+<!--        <g-tabs>-->
+<!--            <div>hi</div>-->
+<!--        </g-tabs>-->
+
+
         <!--        {{selectedTab}}-->
         <!--        <g-tabs :selected="selectedTab" @update:selected="select($event)" direction="Horizontal">-->
-        <g-tabs :selected.sync="selectedTab" direction="Horizontal">
-            <g-tabs-head>
-                <template slot="actions">
-                    <button>设置</button>
-                </template>
-                <g-tabs-item name="woman" >
-                    <g-icon name="setting"></g-icon>
-                    美女
-                </g-tabs-item>
-                <g-tabs-item name="finance" :disabled="false">
-                    财经
-                </g-tabs-item>
-                <g-tabs-item name="sports">
-                    体育
-                </g-tabs-item>
-            </g-tabs-head>
-            <g-tabs-body>
-                <g-tabs-pane name="woman">
-                    美女相关
-                    <img src="http://img3.imgtn.bdimg.com/it/u=1986179278,1118313821&fm=26&gp=0.jpg" alt="">
-                </g-tabs-pane>
-                <g-tabs-pane name="finance">
-                    财经相关
-                    <img src="http://img5.imgtn.bdimg.com/it/u=1979198230,3799788659&fm=26&gp=0.jpg" alt="">
-                </g-tabs-pane>
-                <g-tabs-pane name="sports">
-                    体育相关
-                    <img src="http://img2.imgtn.bdimg.com/it/u=234634259,4236876085&fm=26&gp=0.jpg" alt="">
-                </g-tabs-pane>
-            </g-tabs-body>
-        </g-tabs>
+        <!--        <g-tabs :selected.sync="selectedTab" direction="Horizontal">-->
+        <!--            <g-tabs-head>-->
+        <!--                <template slot="actions">-->
+        <!--                    <button>设置</button>-->
+        <!--                </template>-->
+        <!--                <g-tabs-item name="woman" >-->
+        <!--                    <g-icon name="setting"></g-icon>-->
+        <!--                    美女-->
+        <!--                </g-tabs-item>-->
+        <!--                <g-tabs-item name="finance" :disabled="false">-->
+        <!--                    财经-->
+        <!--                </g-tabs-item>-->
+        <!--                <g-tabs-item name="sports">-->
+        <!--                    体育-->
+        <!--                </g-tabs-item>-->
+        <!--            </g-tabs-head>-->
+        <!--            <g-tabs-body>-->
+        <!--                <g-tabs-pane name="woman">-->
+        <!--                    美女相关-->
+        <!--&lt;!&ndash;                    <img src="http://img3.imgtn.bdimg.com/it/u=1986179278,1118313821&fm=26&gp=0.jpg" alt="">&ndash;&gt;-->
+        <!--                </g-tabs-pane>-->
+        <!--                <g-tabs-pane name="finance">-->
+        <!--                    财经相关-->
+        <!--&lt;!&ndash;                    <img src="http://img5.imgtn.bdimg.com/it/u=1979198230,3799788659&fm=26&gp=0.jpg" alt="">&ndash;&gt;-->
+        <!--                </g-tabs-pane>-->
+        <!--                <g-tabs-pane name="sports">-->
+        <!--                    体育相关-->
+        <!--&lt;!&ndash;                    <img src="http://img2.imgtn.bdimg.com/it/u=234634259,4236876085&fm=26&gp=0.jpg" alt="">&ndash;&gt;-->
+        <!--                </g-tabs-pane>-->
+        <!--            </g-tabs-body>-->
+        <!--        </g-tabs>-->
+
+
     </div>
     <!--<div class="box">-->
     <!--    <button @click="showToast1">top</button>-->
