--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
 
 <body>
 <div id="app">
-    <div class="box">
+    <div class="box" @click='xxx'>
         <g-popover>
             <template slot="content">
-                <div>popover内容</div>
+                <div>111111111111111111111111111111111111111popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容</div>
             </template>
             <template slot="trigger">
-                <button>点击</button>
+                <g-button>点击</g-button>
             </template>
         </g-popover>
 
@@ -97,7 +97,7 @@
                 <div>popover内容</div>
             </template>
             <template slot="trigger">
-                <button>点击</button>
+                <g-button>点击</g-button>
             </template>
         </g-popover>
 
