基本完成 Left Top Bottom方向的Popover

--- a/index.html
+++ b/index.html
@@ -85,19 +85,37 @@
     <div class="box" @click='xxx'>
         <g-popover>
             <template slot="content">
-                <div>111111111111111111111111111111111111111popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容popover内容</div>
+                <div>popover内容</div>
             </template>
             <template slot="trigger">
-                <g-button>点击</g-button>
+                <g-button>top</g-button>
             </template>
         </g-popover>
 
-        <g-popover>
+        <g-popover position="bottom">
             <template slot="content">
                 <div>popover内容</div>
             </template>
             <template slot="trigger">
-                <g-button>点击</g-button>
+                <g-button>bottom</g-button>
+            </template>
+        </g-popover>
+
+        <g-popover position="left">
+            <template slot="content">
+                <div>popover内容</div>
+            </template>
+            <template slot="trigger">
+                <g-button>left</g-button>
+            </template>
+        </g-popover>
+
+        <g-popover position="right">
+            <template slot="content">
+                <div>popover内容</div>
+            </template>
+            <template slot="trigger">
+                <g-button>right</g-button>
             </template>
         </g-popover>
 
