--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
         overflow-x: hidden;
         padding-top: 100px;
         padding-left: 100px;
+        padding-right: 100px;
     }
-    .top{
+
+    .top {
         margin-bottom: 10px;
     }
-    .bottom{
+
+    .bottom {
         margin-top: 10px;
     }
 
@@ -88,125 +91,136 @@
 
 <body>
 <div id="app">
-    <div class="box" @click='xxx'>
-        <div class="top">
-            <g-popover trigger="hover">
-                <template slot="content">
-                    <div>popover内容</div>
-                </template>
-                <template slot="trigger">
-                    <g-button>top</g-button>
-                </template>
-            </g-popover>
 
-            <g-popover position="bottom" trigger="hover">
-                <template slot="content">
-                    <div>popover内容</div>
-                </template>
-                <template slot="trigger">
-                    <g-button>bottom</g-button>
-                </template>
-            </g-popover>
-
-            <g-popover position="left" trigger="hover">
-                <template slot="content">
-                    <div>提到岁月，你们总说它是长河，流得头也不回。少不更事的年纪，我也用过老成口气，念过孔夫子的，逝者如斯乎，不舍昼夜。</div>
-                </template>
-                <template slot="trigger">
-                    <g-button>left</g-button>
-                </template>
-            </g-popover>
-
-            <g-popover position="right" trigger="hover">
-                <template slot="content">
-                    <div>我对她说:你改变了我很多。
-                        她说:不是我改变了你，是你自己本身就渴望改变，我只是恰好出现而已。
-                        我认为她说得对。
-                    </div>
-                </template>
-                <template slot="trigger">
-                    <g-button>right</g-button>
-                </template>
-            </g-popover>
-        </div>
-
-        <div class="bottom">
-            <g-popover>
-                <template slot="content">
-                    <div>popover内容</div>
-                </template>
-                <template slot="trigger">
-                    <g-button>top</g-button>
-                </template>
-            </g-popover>
-
-            <g-popover position="bottom">
-                <template slot="content">
-                    <div>popover内容</div>
-                </template>
-                <template slot="trigger">
-                    <g-button>bottom</g-button>
-                </template>
-            </g-popover>
-
-            <g-popover position="left">
-                <template slot="content">
-                    <div>提到岁月，你们总说它是长河，流得头也不回。少不更事的年纪，我也用过老成口气，念过孔夫子的，逝者如斯乎，不舍昼夜。</div>
-                </template>
-                <template slot="trigger">
-                    <g-button>left</g-button>
-                </template>
-            </g-popover>
-
-            <g-popover position="right">
-                <template slot="content">
-                    <div>我对她说:你改变了我很多。
-                        她说:不是我改变了你，是你自己本身就渴望改变，我只是恰好出现而已。
-                        我认为她说得对。
-                    </div>
-                </template>
-                <template slot="trigger">
-                    <g-button>right</g-button>
-                </template>
-            </g-popover>
-        </div>
-
-        <!--        {{selectedTab}}-->
-        <!--        <g-tabs :selected="selectedTab" @update:selected="select($event)" direction="Horizontal">-->
-        <!--        <g-tabs :selected.sync="selectedTab" direction="Horizontal">-->
-        <!--            <g-tabs-head>-->
-        <!--                <template slot="actions">-->
-        <!--                    <button>设置</button>-->
-        <!--                </template>-->
-        <!--                <g-tabs-item name="woman" >-->
-        <!--                    <g-icon name="setting"></g-icon>-->
-        <!--                    美女-->
-        <!--                </g-tabs-item>-->
-        <!--                <g-tabs-item name="finance" :disabled="false">-->
-        <!--                    财经-->
-        <!--                </g-tabs-item>-->
-        <!--                <g-tabs-item name="sports">-->
-        <!--                    体育-->
-        <!--                </g-tabs-item>-->
-        <!--            </g-tabs-head>-->
-        <!--            <g-tabs-body>-->
-        <!--                <g-tabs-pane name="woman">-->
-        <!--                    美女相关-->
-        <!--&lt;!&ndash;                    <img src="http://img3.imgtn.bdimg.com/it/u=1986179278,1118313821&fm=26&gp=0.jpg" alt="">&ndash;&gt;-->
-        <!--                </g-tabs-pane>-->
-        <!--                <g-tabs-pane name="finance">-->
-        <!--                    财经相关-->
-        <!--&lt;!&ndash;                    <img src="http://img5.imgtn.bdimg.com/it/u=1979198230,3799788659&fm=26&gp=0.jpg" alt="">&ndash;&gt;-->
-        <!--                </g-tabs-pane>-->
-        <!--                <g-tabs-pane name="sports">-->
-        <!--                    体育相关-->
-        <!--&lt;!&ndash;                    <img src="http://img2.imgtn.bdimg.com/it/u=234634259,4236876085&fm=26&gp=0.jpg" alt="">&ndash;&gt;-->
-        <!--                </g-tabs-pane>-->
-        <!--            </g-tabs-body>-->
-        <!--        </g-tabs>-->
-
-
+    <div class="box">
+        <g-collapse>
+            <g-collapse-item title="title1">红尘初妆，山河无疆。最初的面庞，碾碎梦魇无常，命格无双。</g-collapse-item>
+            <g-collapse-item title="title2">内容2</g-collapse-item>
+            <g-collapse-item title="title3">内容3</g-collapse-item>
+        </g-collapse>
     </div>
+
+    <!--    <div class="box" @click='xxx'>-->
+    <!--        <div class="top">-->
+    <!--            <g-popover trigger="hover">-->
+    <!--                <template slot="content">-->
+    <!--                    <div>popover内容</div>-->
+    <!--                </template>-->
+    <!--                <template slot="trigger">-->
+    <!--                    <g-button>top</g-button>-->
+    <!--                </template>-->
+    <!--            </g-popover>-->
+
+    <!--            <g-popover position="bottom" trigger="hover">-->
+    <!--                <template slot="content">-->
+    <!--                    <div>popover内容</div>-->
+    <!--                </template>-->
+    <!--                <template slot="trigger">-->
+    <!--                    <g-button>bottom</g-button>-->
+    <!--                </template>-->
+    <!--            </g-popover>-->
+
+    <!--            <g-popover position="left" trigger="hover">-->
+    <!--                <template slot="content">-->
+    <!--                    <div>提到岁月，你们总说它是长河，流得头也不回。少不更事的年纪，我也用过老成口气，念过孔夫子的，逝者如斯乎，不舍昼夜。</div>-->
+    <!--                </template>-->
+    <!--                <template slot="trigger">-->
+    <!--                    <g-button>left</g-button>-->
+    <!--                </template>-->
+    <!--            </g-popover>-->
+
+    <!--            <g-popover position="right" trigger="hover">-->
+    <!--                <template slot="content">-->
+    <!--                    <div>我对她说:你改变了我很多。-->
+    <!--                        她说:不是我改变了你，是你自己本身就渴望改变，我只是恰好出现而已。-->
+    <!--                        我认为她说得对。-->
+    <!--                    </div>-->
+    <!--                </template>-->
+    <!--                <template slot="trigger">-->
+    <!--                    <g-button>right</g-button>-->
+    <!--                </template>-->
+    <!--            </g-popover>-->
+    <!--        </div>-->
+
+    <!--        <div class="bottom">-->
+    <!--            <g-popover>-->
+    <!--                <template slot="content">-->
+    <!--                    <div>popover内容</div>-->
+    <!--                </template>-->
+    <!--                <template slot="trigger">-->
+    <!--                    <g-button>top</g-button>-->
+    <!--                </template>-->
+    <!--            </g-popover>-->
+
+    <!--            <g-popover position="bottom">-->
+    <!--                <template slot="content">-->
+    <!--                    <div>popover内容</div>-->
+    <!--                </template>-->
+    <!--                <template slot="trigger">-->
+    <!--                    <g-button>bottom</g-button>-->
+    <!--                </template>-->
+    <!--            </g-popover>-->
+
+    <!--            <g-popover position="left">-->
+    <!--                <template slot="content">-->
+    <!--                    <div>提到岁月，你们总说它是长河，流得头也不回。少不更事的年纪，我也用过老成口气，念过孔夫子的，逝者如斯乎，不舍昼夜。</div>-->
+    <!--                </template>-->
+    <!--                <template slot="trigger">-->
+    <!--                    <g-button>left</g-button>-->
+    <!--                </template>-->
+    <!--            </g-popover>-->
+
+    <!--            <g-popover position="right">-->
+    <!--                <template slot="content">-->
+    <!--                    <div>我对她说:你改变了我很多。-->
+    <!--                        她说:不是我改变了你，是你自己本身就渴望改变，我只是恰好出现而已。-->
+    <!--                        我认为她说得对。-->
+    <!--                    </div>-->
+    <!--                </template>-->
+    <!--                <template slot="trigger">-->
+    <!--                    <g-button>right</g-button>-->
+    <!--                </template>-->
+    <!--            </g-popover>-->
+    <!--        </div>-->
+
+    <!--        &lt;!&ndash;        {{selectedTab}}&ndash;&gt;-->
+    <!--        &lt;!&ndash;        <g-tabs :selected="selectedTab" @update:selected="select($event)" direction="Horizontal">&ndash;&gt;-->
+    <!--        &lt;!&ndash;        <g-tabs :selected.sync="selectedTab" direction="Horizontal">&ndash;&gt;-->
+    <!--        &lt;!&ndash;            <g-tabs-head>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                <template slot="actions">&ndash;&gt;-->
+    <!--        &lt;!&ndash;                    <button>设置</button>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                </template>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                <g-tabs-item name="woman" >&ndash;&gt;-->
+    <!--        &lt;!&ndash;                    <g-icon name="setting"></g-icon>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                    美女&ndash;&gt;-->
+    <!--        &lt;!&ndash;                </g-tabs-item>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                <g-tabs-item name="finance" :disabled="false">&ndash;&gt;-->
+    <!--        &lt;!&ndash;                    财经&ndash;&gt;-->
+    <!--        &lt;!&ndash;                </g-tabs-item>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                <g-tabs-item name="sports">&ndash;&gt;-->
+    <!--        &lt;!&ndash;                    体育&ndash;&gt;-->
+    <!--        &lt;!&ndash;                </g-tabs-item>&ndash;&gt;-->
+    <!--        &lt;!&ndash;            </g-tabs-head>&ndash;&gt;-->
+    <!--        &lt;!&ndash;            <g-tabs-body>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                <g-tabs-pane name="woman">&ndash;&gt;-->
+    <!--        &lt;!&ndash;                    美女相关&ndash;&gt;-->
+    <!--        &lt;!&ndash;&lt;!&ndash;                    <img src="http://img3.imgtn.bdimg.com/it/u=1986179278,1118313821&fm=26&gp=0.jpg" alt="">&ndash;&gt;&ndash;&gt;-->
+    <!--        &lt;!&ndash;                </g-tabs-pane>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                <g-tabs-pane name="finance">&ndash;&gt;-->
+    <!--        &lt;!&ndash;                    财经相关&ndash;&gt;-->
+    <!--        &lt;!&ndash;&lt;!&ndash;                    <img src="http://img5.imgtn.bdimg.com/it/u=1979198230,3799788659&fm=26&gp=0.jpg" alt="">&ndash;&gt;&ndash;&gt;-->
+    <!--        &lt;!&ndash;                </g-tabs-pane>&ndash;&gt;-->
+    <!--        &lt;!&ndash;                <g-tabs-pane name="sports">&ndash;&gt;-->
+    <!--        &lt;!&ndash;                    体育相关&ndash;&gt;-->
+    <!--        &lt;!&ndash;&lt;!&ndash;                    <img src="http://img2.imgtn.bdimg.com/it/u=234634259,4236876085&fm=26&gp=0.jpg" alt="">&ndash;&gt;&ndash;&gt;-->
+    <!--        &lt;!&ndash;                </g-tabs-pane>&ndash;&gt;-->
+    <!--        &lt;!&ndash;            </g-tabs-body>&ndash;&gt;-->
+    <!--        &lt;!&ndash;        </g-tabs>&ndash;&gt;-->
+
+
+    <!--    </div>-->
+
+
     <!--<div class="box">-->
     <!--    <button @click="showToast1">top</button>-->
     <!--    <button @click="showToast2">middle</button>-->
