--- a/index.html
+++ b/index.html
@@ -93,10 +93,12 @@
 <div id="app">
 
     <div class="box">
-        <g-collapse :single="true" selected="2">
+                <g-collapse :single="false" :default-active-key="collapseTab" v-bind:active-key="activeKey" v-on:update:active-key="activeKey = $event">
+<!--        <g-collapse :single="false" :default-active-key="collapseTab" v-bind:active-key.sync="activeKey">-->
             <g-collapse-item title="title1" name="1">红尘初妆，山河无疆。最初的面庞，碾碎梦魇无常，命格无双。</g-collapse-item>
             <g-collapse-item title="title2" name="2">内容2</g-collapse-item>
             <g-collapse-item title="title3" name="3">内容3</g-collapse-item>
+            {{activeKey}}
         </g-collapse>
     </div>
 
